# TADA

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.agents/: TADA_ARCHITECTURE.md  TADA_CONTEXT.md  TADA_REPO_STRUCTURE.md
core/: config.py  llm.py  research.py  splash.py  trace.py
data/: contacts.csv
tada/: batch.py  claim_extractor.py  cli.py  dataset_forensics.py  deck_parser.py  diffing.py  foliopy_bridge.py  grounding.py  infrastructure.py  models.py  report.py  talent.py  verdict.py
tests/: test_claim_extractor.py
