[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tada"
version = "0.1.0"
description = "Technical AI-Diligence Agent"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.9.0,<0.15",
    "click<8.2",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "trafilatura>=1.6.0",
    "duckduckgo_search>=4.0.0",
    "openai>=1.0.0",
    "requests>=2.31.0",
    "PyMuPDF>=1.23.0",
    "rich>=13.0.0",
    "pyfiglet>=1.0.0",
    "huggingface-hub>=0.20.0",
    "supabase>=2.0.0",
]

[project.scripts]
tada = "tada.cli:main"

[tool.setuptools.packages.find]
where = ["."]
